testdata/baselines/reference/submodule/compiler/duplicateIdentifierRelatedSpans7.errors.txt
[96mfile2.ts[0m:[93m1[0m:[93m22[0m - [91merror[0m[90m TS6231: [0mCould not resolve the path './file1' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.

[7m1[0m /// <reference path="./file1" />
[7m [0m [91m                     ~~~~~~~[0m

[96mfile2.ts[0m:[93m3[0m:[93m16[0m - [91merror[0m[90m TS2664: [0mInvalid module name in augmentation, module 'someMod' cannot be found.

[7m3[0m declare module "someMod" {
[7m [0m [91m               ~~~~~~~~~[0m


==== file2.ts (2 errors) ====
    /// <reference path="./file1" />
                         ~~~~~~~
!!! error TS6231: Could not resolve the path './file1' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.
    
    declare module "someMod" {
                   ~~~~~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'someMod' cannot be found.
        export interface TopLevel {
            duplicate1(): number;
            duplicate2(): number;
            duplicate3(): number;
            duplicate4(): number;
            duplicate5(): number;
            duplicate6(): number;
            duplicate7(): number;
            duplicate8(): number;
            duplicate9(): number;
        }
    }
    export {};
    
==== file1.ts (0 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            duplicate2: () => string;
            duplicate3: () => string;
            duplicate4: () => string;
            duplicate5: () => string;
            duplicate6: () => string;
            duplicate7: () => string;
            duplicate8: () => string;
            duplicate9: () => string;
        }
    }
Found 2 errors in the same file, starting at: file2.ts[90m:1[0m

